<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    tools:context="com.example.sandeep.lueventtracker.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textColor="#E40011"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="LU Grad Fair" />

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:paddingRight="16dp"
                android:text="@string/date"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="4"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                tools:text="Mar 6, 2010" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:paddingRight="16dp"
                android:text="@string/time"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/time_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="4"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                tools:text="10:00 AM - 12:00 PM" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:paddingRight="16dp"
                android:text="@string/location"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/location_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="4"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                tools:text="Plummer Room, 8th Floor, Mary and John Gray Library" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:paddingRight="16dp"
                android:text="@string/details"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/details_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="4"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                tools:text="Bring on the pomp circumstance!  LU Spring Commencement is almost here! You are invited to the LU Grad Fair...your one-stop shop for all of your commencement needs!  This is a two-day event where you can find everything you need to make your big day a memorable one. At the Fair you can: Order your official class ring Take a FREE professional headshot Learn more about becoming a contributing alumnus Order your cap and gown Order regalia, invitations and announcements Take your exit interview for Financial Aid and Career and Professional Development Let Career Services staff review your resume and share tools to help you find a job Bring an old Lamar shirt and swap it for a new alumni shirt!" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contacts_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:paddingRight="16dp"
                android:text="@string/contact"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/contact_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="4"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                tools:text="Brandie Van Zanden 409-880-7832" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_details_spinner"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/navigation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="#E40011"
        android:onClick="onClickNavigation"
        android:text="@string/take_me_there"
        android:textStyle="bold"
        android:textAlignment="center" />

</RelativeLayout>
